# Audio_dictionary

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  ws.py
backend/temp_audio/: 7772e8aa-e849-4ae2-9744-d5f4bb007f59.webm  ef131a5a-326c-439a-9563-87dc2dce0b3e.pcm  test_audio.m4a
frontend/: .env  Dockerfile  package-lock.json  package.json
frontend/src/: App.jsx  keywords.json
